--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block style_links %}
-<link rel="stylesheet" href="{% static 'styles/index-styles.css' %}">
+<link rel="stylesheet" href="{% static 'styles/index.css' %}">
 {% endblock %}
 {% block main_content %}
 <div class="password-generator option">
