--- a/byte_locker_app/static/styles/passwd-gen.css
+++ b/byte_locker_app/static/styles/passwd-gen.css
@@ -20,13 +20,6 @@
     font-weight: lighter;
 }
 
-#loader-password-generator {
-    width: 50%;
-    height: 30%;
-    margin: 20% 0%;
-    display: none;
-}
-
 .password-generator-details {
     display: flex;
     flex-direction: column;
@@ -104,16 +97,18 @@
     font-style: italic;
 }
 
-.error-message {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.form-actions { 
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 0.8rem;
 }
 
 .error-message > p {
     color: #ff0000;
     text-align: center;
     width: 100%;
+    border: 2px solid #ff0000;
+    padding: 2%;
 }
