--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteLocker</title>
-    <link rel="stylesheet" href="{% static 'styles/auth-styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/auth.css' %}">
 </head>
 <body>
     <main>
