dinâmica do abre e fecha modal
Fiz a dinâmica do abre e fecha modal, fiz a estilização dos modals e as separei num único arquivo, e organizei as classes dos elementos HTML

--- a/byte_locker_app/static/styles/saved-accounts.css
+++ b/byte_locker_app/static/styles/saved-accounts.css
@@ -37,7 +37,7 @@ main > ul > li > p {
     width: 90%;
     text-align: left;
     color: var(--first_color);
-    font-weight: bold;
+    font-weight: lighter;
     font-size: 1rem;
     text-decoration: underline;
 }
