--- a/templates/saved-accounts.html
+++ b/templates/saved-accounts.html
@@ -19,15 +19,23 @@
     {% endfor %}
 </ul>
 <hr>
-<div class="user-account-datas-get action">
-    <h1>Informações da conta</h1>
+{% endblock %}
+{% block aside_content %}
+<div class="modal" id="user-account-datas-get">
+    <section class="modal-header">
+        <h1>Informações da conta</h1>
+        <button>X</button>
+    </section>
     <p>NOME DO PROGRAMA</p>
     <p>EMAIL</p>
     <p>NOME DE USUÁRIO</p>
     <textarea cols="30" rows="20" readonly>DESCRIÇÃO</textarea>
 </div>
-<div class="user-account-datas-up action">
-    <h1>Actualização das informações da conta</h1>
+<div class="modal" id="user-account-datas-up">
+    <section class="modal-header">
+        <h1>Actualização das informações da conta</h1>
+        <button>X</button>
+    </section>
     <form method="post">
         <label for="program_name">Nome do programa</label>
         <input type="text" name="program-name" id="program_name">
@@ -40,8 +48,11 @@
         <button type="submit">Actualizar</button>
     </form>
 </div>
-<div class="user-account-datas-del action">
-    <h1>Eliminação de conta</h1>
+<div class="modal" id="user-account-datas-del">
+    <section class="modal-header">
+        <h1>Eliminação de conta</h1>
+        <button>X</button>
+    </section>
     <p>Tens certeza que pretendes eliminar os dados da sua conta em PROGRAMA?</p>
     <div class="actions">
         <button>Sim</button>
