--- a/byte_locker_app/static/styles/saved-passwd.css
+++ b/byte_locker_app/static/styles/saved-passwd.css
@@ -21,10 +21,8 @@
     color: var(--second_color);
     font-size: 1.4em;
     font-weight: lighter;
-}
-
-.saved-passwords > #new_passwd_btn {
-    margin: 2rem;
+    margin: 0.7rem;
+    padding: 0.4rem;
 }
 
 hr {
